// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render as default 1`] = `
.emotion-0 {
  border-color: rgb(247, 247, 247);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
  >
    <h1>
      section
    </h1>
    <p>
      content can go anywhere
    </p>
    <div>
      a div
    </div>
    <div>
      another div
    </div>
  </section>
</div>
`;

exports[`Section should render colorway background 1`] = `
.emotion-0 {
  border-color: rgb(247, 247, 247);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="background"
  >
    <h1>
      background
       section
    </h1>
    <p>
      background
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway backgroundAlt 1`] = `
.emotion-0 {
  border-color: rgb(240, 240, 240);
  background-color: rgb(247, 247, 247);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="backgroundAlt"
  >
    <h1>
      backgroundAlt
       section
    </h1>
    <p>
      backgroundAlt
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway danger 1`] = `
.emotion-0 {
  border-color: rgb(186, 32, 47);
  background-color: rgb(220, 53, 69);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="danger"
  >
    <h1>
      danger
       section
    </h1>
    <p>
      danger
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway dark 1`] = `
.emotion-0 {
  border-color: rgb(51, 51, 51);
  background-color: rgb(26, 26, 26);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="dark"
  >
    <h1>
      dark
       section
    </h1>
    <p>
      dark
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway info 1`] = `
.emotion-0 {
  border-color: rgb(18, 130, 147);
  background-color: rgb(23, 162, 184);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="info"
  >
    <h1>
      info
       section
    </h1>
    <p>
      info
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway light 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(240, 240, 240);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="light"
  >
    <h1>
      light
       section
    </h1>
    <p>
      light
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway neutral 1`] = `
.emotion-0 {
  border-color: rgb(102, 102, 102);
  background-color: rgb(127, 127, 127);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="neutral"
  >
    <h1>
      neutral
       section
    </h1>
    <p>
      neutral
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway primary 1`] = `
.emotion-0 {
  border-color: rgb(204, 136, 0);
  background-color: rgb(255, 170, 0);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="primary"
  >
    <h1>
      primary
       section
    </h1>
    <p>
      primary
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway prominent 1`] = `
.emotion-0 {
  border-color: rgb(204, 136, 0);
  background-color: rgb(255, 170, 0);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="prominent"
  >
    <h1>
      prominent
       section
    </h1>
    <p>
      prominent
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway secondary 1`] = `
.emotion-0 {
  border-color: rgb(0, 125, 225);
  background-color: rgb(26, 153, 255);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="secondary"
  >
    <h1>
      secondary
       section
    </h1>
    <p>
      secondary
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway success 1`] = `
.emotion-0 {
  border-color: rgb(32, 134, 55);
  background-color: rgb(40, 167, 69);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="success"
  >
    <h1>
      success
       section
    </h1>
    <p>
      success
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway tertiary 1`] = `
.emotion-0 {
  border-color: rgb(0, 122, 122);
  background-color: rgb(0, 153, 153);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="tertiary"
  >
    <h1>
      tertiary
       section
    </h1>
    <p>
      tertiary
       content
    </p>
  </section>
</div>
`;

exports[`Section should render colorway warning 1`] = `
.emotion-0 {
  border-color: rgb(210, 157, 0);
  background-color: rgb(255, 193, 7);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class="emotion-0"
    color="warning"
  >
    <h1>
      warning
       section
    </h1>
    <p>
      warning
       content
    </p>
  </section>
</div>
`;
